Use getFirst() and inline return value